--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -66,3 +66,29 @@ footer{
                 HOME SLIDER STYLES
 ==============================================*/
 
+.slider-items{
+    height: 500px;
+    background-size: cover !important;
+    background-position: center center !important;
+    position: relative;
+    font-family: 'Fjalla One', sans-serif;
+}
+.slider-items .caption {
+    color: #fff;
+    position: absolute;
+    right: 0px;
+    text-align: right;
+    padding: 20px;
+    width: 320px;
+    text-transform: uppercase;
+}
+.slider-items .caption h4{
+    font-weight: 300;
+    margin: 0;
+}
+
+.slider-items .caption p{
+    font-size: 70px;
+    margin-top: 0px; 
+}
+
