--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -14,6 +14,7 @@ body{
 
 a{
     text-decoration: none;
+    color: #1b1b1b;
 }
 
 h3{
@@ -92,3 +93,8 @@ footer{
     margin-top: 0px; 
 }
 
+
+
+.subscribe_panel{
+    
+}
