--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -94,7 +94,53 @@ footer{
 }
 
 
+/*=============================================
+                Subscribe Panel CSS
+==============================================*/
 
 .subscribe_panel{
-    
+    text-align: center; 
+    /* width: 350px; */
+    /* margin: 0 auto; */
+}
+.subscribe_panel h3{
+    margin-bottom:  0;
+    font-family: 'Fjalla One', sans-serif;
+    font-style: 35px;
+    font-weight: 300;
+}
+
+.subscribe_panel form input{ 
+    font-family: 'Roboto Slab', serif;
+    border-radius: 20px;
+    border:  3px solid #dddddd;
+    padding: 10px;
+    /* width: 50vw; */
+    min-width: 200px;
+    text-align: center;
+    font-size: 19px;
+    margin: 10px 0px;
+}
+.subscribe_panel form input:focus{
+    outline-style: none;
+}
+.subscribe_panel small{
+    width: 50%;
+    font-size: 10px;
+    line-height: 0px;
+    margin: auto;
+}
+
+.subscribe_panel .error{
+    color: #f44336;
+    display: none;
+}
+.subscribe_panel .success{
+    display: none;
+    color: #4caf50;
+}
+
+.subscribe_panel .error.show,
+.subscribe_panel .success.show{
+    display: block;
 }
