--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -260,6 +260,7 @@ footer{
 .teams_component{
     text-align: center;
     margin:  0 auto;
+    /* width: 800px; */
     min-height: 550px;
 }
 
@@ -289,7 +290,7 @@ footer{
 
 .teams_container .team_item{
     width: 25%;
-    padding: 30px;
+    padding: 20px;
     box-sizing: border-box;
 }
 .teams_container .team_item img{
@@ -322,4 +323,63 @@ footer{
 .fade-leave.fade-leave-active{
     opacity: 0.01;
     transition: all .5s ease-in;
+}
+
+/*=============================================
+                TEAM    
+==============================================*/
+
+.team_detail_wrapper{
+    display: flex;
+}
+
+.team_detail_wrapper .left{
+    box-sizing: border-box;
+    padding: 10px 20px;
+}
+.team_detail_wrapper .left img{
+    width: 150px;
+}
+.team_detail_wrapper .right{
+    box-sizing: border-box;
+    flex-grow: 1;
+    border-left: 1px solid #b9b9b9;
+    padding: 0px 10px;
+}
+.team_detail_wrapper .right h1{
+
+    color: #6d6d6d;
+
+}
+.team_detail_wrapper .squad{
+    display:  flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.team_detail_wrapper .squad .item{
+    position: relative;
+    width: 25%;
+    overflow: hidden;
+    padding: 20px;
+    box-sizing: border-box;
+}
+.team_detail_wrapper .squad .item img{
+    width: 40%;
+    display: block;
+    margin: 0 auto;
+}
+
+.team_detail_wrapper .squad .item h4{
+    text-align: center;
+    color: #006bb6;
+}
+
+.team_detail_wrapper .squad .item .node{
+    font-size: 14px;
+    padding: 4px 0;
+
+}
+.team_detail_wrapper .squad .item .node span{
+    font-weight: 600; 
 }
